After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 704666 - dbus: bond connection doesn't accept numeric values for options
dbus: bond connection doesn't accept numeric values for options
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: API
0.9.8
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-07-22 09:17 UTC by Ondrej Lichtner
Modified: 2015-01-13 09:01 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Ondrej Lichtner 2013-07-22 09:17:06 UTC
When creating a bond connection through d-bus, you can't use numeric values for bonding options, only their string variants.
These are valid option values so I don't see a reason not to accept them.
Comment 1 Pavel Simerda 2013-09-30 19:39:26 UTC
Is it still the case? What's the developers' opinion?
Comment 2 Jiri Klimes 2015-01-13 09:01:26 UTC
The code adding support for numeric bond values has been merged to master:
5cf985e merge: accept numeric bonding modes (bgo #704666) (rh #1133544) (rh #1171009)
c743670 ifcfg-rh: add a testcase for numeric bonding mode values in BONDING_OPTS
3d1b6bd bond: normalize bond mode to string notation (rh #1171009)
93438dd libnm-core: accept numeric bond modes (bgo #704666) (rh #1133544)
d787f03 utils: add functions for converting string <-> numeric bonding modes