libnm-core: accept numeric bond modes (bgo #704666) (rh #1133544)

https://bugzilla.gnome.org/show_bug.cgi?id=704666
https://bugzilla.redhat.com/show_bug.cgi?id=1133544